# The_AI_coding_Engineer

./: .gitignore  README.md
backend/: pyproject.toml
backend/api/: auth_api.py
backend/database/: db.connect.py
backend/users/: Schemas.py  api.py  database.py  main.py  models.py
